--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:600|Open+Sans:600&display=swap');
-
 /*Обнуление*/
 *,
 *:before,
@@ -7,119 +5,22 @@
 	padding: 0;
 	margin: 0;
 	border: 0;
-  box-sizing: border-box;
-  text-decoration: none;
+	box-sizing: border-box;
 } 
+
 body{
-  font-family: 'Raleway', sans-serif;
-  width: 1600px;
- /*  width: 100%; */ /*ширина блока*/
-  margin: 0 auto; /*выровниваем по центру*/
-  color: #ffffff;
-}
-.grid__area{
-  display: grid;
-  grid-template-columns: 275px 950px;
-  grid-template-rows: max-content 1fr;
-  grid-template-areas:
-      "sidebar__ header__"
-      "sidebar__ aboutme__"
-      "sidebar__ experience__"
-      "sidebar__ education__"
-      "sidebar__ myskills"    
-      "sidebar__ message"   
-      "sidebar__ footer";    
-}
-.header{
-  grid-area: header__ ;
-}
-.aboutme{
-  grid-area: aboutme__;
-}
-.experience{
-  grid-area: experience__;
-}
-.education{
-  grid-area: education__;
-}
-.myskills{
-  grid-area: myskills;
-}
-.message{
-  grid-area: message;
-}
-.footer{
-  grid-area: footer;
+    font-family: 'Raleway', sans-serif;
+    width: 1300px;
+   /*  width: 100%; */ /*ширина блока*/
+    margin: 0 auto; /*выровниваем по центру*/
+    color: #ffffff;
 }
 
-
-
-.sidebar__sticky{
-  /* position: absolute; */
-  /* position: sticky;
-  top: 0;
-  height: calc(100% - 52.7rem);
-  overflow-x: visible;
-  overflow-y: visible; */
-  grid-area: sidebar__;
-  width: 100%;
-}
-.sidebar{
-  /* position: fixed; */
-
-  width: 100%;
- /*  left: -240px; */
-  height: 100%;
-  background-color: #353541;
-  padding-right: 20px;
-
-  /* transition: all .5s ease; */
-}
-.sidebar header{
-  font-size: 28px;
-  color: white;
-  line-height: 70px;
-  text-align: center;
-  background-color: #353541;
-  user-select: none;
-  font-family: 'Montserrat', sans-serif;
-}
-.sidebar a{
-  display: block;
-  height: 65px;
-  width: 100%;
-  color: white;
-  line-height: 65px;
-  padding-left: 30px;
-  box-sizing: border-box;
-  border-bottom: 1px solid black;
-  border-top: 1px solid rgba(255,255,255,.1);
-  border-left: 5px solid transparent;
-  font-family: 'Open Sans', sans-serif;
-  transition: all .5s ease;
-}
-a.active,a:hover{
-  border-left: 5px solid #b93632;
-  color: #b93632;
-}
-.sidebar a i{
-  font-size: 23px;
-  margin-right: 16px;
-}
-.sidebar a span{
-  letter-spacing: 1px;
-  text-transform: uppercase;
-}
-
-
-
-
-
-
+/* Style for "Background" */
 
 .header__block{    
    height:  586px;
-   background: #1a1819 url("../img/Header_Bg.jpg") center no-repeat;
+   background: #1a1819 url("../img/Header_Bg_01.jpg") center no-repeat;
    margin-bottom: 75px;
  
 }
@@ -133,7 +34,6 @@ a.active,a:hover{
     width: 1120px;; /*ширина блока*/
     max-width: 100%; /*максимальный размер 1440пх*/
     margin: 0 auto; /*выровниваем по центру*/
-    padding-left: 20px;
    
 }
 
@@ -198,7 +98,9 @@ a.active,a:hover{
     align-items: center;
     padding-bottom: 100px;
 }
-
+/* .aboutme__info{
+    
+} */
 
 .aboutme__card{
     display: flex; 
@@ -233,6 +135,11 @@ a.active,a:hover{
 }
 
 
+/* Style for "Rounded Re" */
+/* width: 512px;
+height: 147px;
+background-color: #353541; */
+  
 
 
 .aboutme__param{
@@ -316,25 +223,25 @@ a.active,a:hover{
 
 
 .experience__item{
-    width: 339px;
-    height: 116px; 
+    width: 512px;
+    height: 147px; 
   
    
 
 }
 
 .experience__item.right{
-    background: #ffffff url("../img/Rounded_Rectangle_3.svg") center no-repeat;
+    background: #ffffff url("../img/Rounded_Rectangle_right.svg") center no-repeat;
     top:50%;
     left:50%;
-    padding: 10px 30px 10px 10px;
+    padding: 20px 82px 20px 20px;
 }   
 
 .experience__item.left{
-    background: #ffffff url("../img/Rounded_Rectangle_4.svg") center no-repeat;
+    background: #ffffff url("../img/Rounded_Rectangle_left.svg") center no-repeat;
     top:50%;
     left:50%;
-    padding: 10px 40px 10px 40px;
+    padding: 20px 30px 20px 60px;
 }
 
 .right{
@@ -349,20 +256,20 @@ a.active,a:hover{
 .experience__position{  
     color: #ffffff;
     font-family: Raleway;
-    font-size: 16px;
+    font-size: 22px;
     font-weight: 500;
     text-align: left;
     font-style: normal;
     letter-spacing: normal;
     line-height: normal;
-    padding-bottom: 10px;
+    padding-bottom: 15px;
 }
 .experience__company{ 
     padding-left: 10px;
     opacity: 0.8;
     color: #ffffff;
     font-family: Raleway;
-    font-size: 16px;
+    font-size: 20px;
     font-weight: 500;
     font-style: normal;
     letter-spacing: normal;
@@ -373,21 +280,21 @@ a.active,a:hover{
     display: block;
     color: #fb6470;
     font-family: Raleway;
-    font-size: 15px;
+    font-size: 18px;
     font-weight: 400;
     text-align: left;
     text-transform: uppercase;
     font-style: normal;
     letter-spacing: normal;
     line-height: normal;
-    padding-bottom: 10px;
+    padding-bottom: 15px;
 }
 
 .experience__text{
     display: block;
     color: #ffffff;
     font-family: Raleway;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 400;
     font-style: normal;
     letter-spacing: normal;
@@ -396,9 +303,9 @@ a.active,a:hover{
     line-height: normal;
     
 }
-/* .experience__item.right p.experience__text{
-    padding-right: 100px;
-} */
+.experience__item.right p.experience__text{
+    padding-right: 0px;
+}
 .vl {
     border-left: 2px solid  #353541;
     height: auto;  
@@ -674,6 +581,7 @@ input, textarea{
     font-style: italic;
     text-align: left;
     line-height: normal;
+    resize: none;
 }
 input{
     height: 35px;
