docs: add info for Logo Rs School

--- a/style/style.css
+++ b/style/style.css
@@ -176,6 +176,7 @@ background-color: #353541; */
 
 .aboutme__card p{
     padding-bottom: 15px;
+    padding-top: 15px;
 }
     
 .aboutme__param p{
@@ -409,7 +410,7 @@ background-color: #353541; */
     width: 50%;   
 }
 .skill__size-2:nth-child(1):before{
-    width: 25%;   
+    width: 50%;   
 }
 .skill__size-2:nth-child(2):before{
     width: 25%;   
@@ -503,12 +504,15 @@ padding-top: 20px;
 padding-bottom: 40px;
 }
 .footer_social{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 padding-top: 35px;
 }
 
 .footer_social ul{
 display: flex;
-justify-content: center;
+
 align-items: center; 
 }
 .footer_social ul li{
