--- a/style/style.css
+++ b/style/style.css
@@ -1,44 +1,48 @@
 /*Обнуление*/
-*,
-*:before,
-*:after {
-	padding: 0;
-	margin: 0;
-	border: 0;
-	box-sizing: border-box;
-} 
 
-body{
+*, *:before, *:after {
+    padding: 0;
+    margin: 0;
+    border: 0;
+    box-sizing: border-box;
+}
+
+body {
     font-family: 'Raleway', sans-serif;
     width: 1300px;
-   /*  width: 100%; */ /*ширина блока*/
-    margin: 0 auto; /*выровниваем по центру*/
+    /*  width: 100%; */
+    /*ширина блока*/
+    margin: 0 auto;
+    /*выровниваем по центру*/
     color: #ffffff;
 }
 
 /* Style for "Background" */
 
-.header__block{    
-   height:  586px;
-   background: #1a1819 url("../img/Header_Bg_01.jpg") center no-repeat;
-   background-size: 1300px 718px;
-   margin-bottom: 75px;
- 
+.header__block {
+    height: 586px;
+    background: #1a1819 url("../img/Header_Bg_01.jpg") center no-repeat;
+    background-size: 1300px 718px;
+    margin-bottom: 75px;
 }
-.header__flex{
-    display: flex; 
+
+.header__flex {
+    display: flex;
     flex-direction: column;
     justify-content: center;
     margin-left: 88px;
 }
-.container{
-    width: 1120px; /*ширина блока*/
-    max-width: 100%; /*максимальный размер 1440пх*/
-    margin: 0 auto; /*выровниваем по центру*/
-   
+
+.container {
+    width: 1120px;
+    /*ширина блока*/
+    max-width: 100%;
+    /*максимальный размер 1440пх*/
+    margin: 0 auto;
+    /*выровниваем по центру*/
 }
 
-.header__title{    
+.header__title {
     font-family: Raleway;
     font-size: 48px;
     font-weight: 500;
@@ -46,9 +50,9 @@ body{
     text-align: center;
     margin-top: 210px;
     margin-bottom: 25px;
- 
 }
-.header__text{   
+
+.header__text {
     font-family: Raleway;
     font-size: 18px;
     font-weight: 500;
@@ -56,59 +60,58 @@ body{
     text-align: center;
     padding-bottom: 20px;
 }
-.header__form{
+
+.header__form {
     text-align: center;
 }
 
-.header__btn{
+.header__btn {
     width: 170px;
-    height: 49px;        
-        background-color: #fb6470;
-        font-weight: bold;      
-        color: #ffffff;
-        cursor: pointer;
-        text-transform: uppercase;
-        border: 2px solid  #fb6470; 
-        outline: none; /*убирает черный бордер при клике по кнопке*/
-        margin-bottom: 100px;
+    height: 49px;
+    background-color: #fb6470;
+    font-weight: bold;
+    color: #ffffff;
+    cursor: pointer;
+    text-transform: uppercase;
+    border: 2px solid #fb6470;
+    outline: none;
+    /*убирает черный бордер при клике по кнопке*/
+    margin-bottom: 100px;
 }
 
 .header__title:after {
     content: "";
-    display: block;      
+    display: block;
     margin: 0 auto -5px;
     width: 327px;
     height: 2px;
     background-color: #fb6470;
-
-    
 }
+
 .header__title:before {
     content: "";
     content: "";
-    display: block;      
+    display: block;
     margin: 0 auto -5px;
     width: 327px;
     height: 2px;
     background-color: #fb6470;
 }
 
-.aboutme__flex{
-    display: flex; 
+.aboutme__flex {
+    display: flex;
     justify-content: space-between;
     align-items: center;
     padding-bottom: 100px;
 }
-/* .aboutme__info{
-    
-} */
 
-.aboutme__card{
-    display: flex; 
+.aboutme__card {
+    display: flex;
     justify-content: left;
     align-items: center;
 }
-.aboutme__title{
+
+.aboutme__title {
     color: #3e3e3e;
     font-family: "Raleway";
     font-size: 32px;
@@ -117,10 +120,10 @@ body{
     font-style: normal;
     letter-spacing: normal;
     line-height: normal;
-    padding-bottom: 50px;    
-
+    padding-bottom: 50px;
 }
-.aboutme__text{      
+
+.aboutme__text {
     opacity: 0.8;
     color: #3e3e3e;
     font-family: Raleway;
@@ -128,22 +131,13 @@ body{
     font-weight: 500;
     font-style: normal;
     letter-spacing: normal;
-    text-align: left; 
+    text-align: left;
     line-height: normal;
     padding-bottom: 40px;
-   
     line-height: 1.625;
 }
 
-
-/* Style for "Rounded Re" */
-/* width: 512px;
-height: 147px;
-background-color: #353541; */
-  
-
-
-.aboutme__param{
+.aboutme__param {
     color: #3e3e3e;
     font-size: 18px;
     text-align: left;
@@ -153,16 +147,12 @@ background-color: #353541; */
     letter-spacing: normal;
     line-height: normal;
     padding-right: 30px;
- 
 }
 
-
-
-
-.aboutme__data{
+.aboutme__data {
     color: #3e3e3e;
     font-family: Raleway;
-    font-size: 18px;   
+    font-size: 18px;
     line-height: 50px;
     text-align: left;
     font-family: "Raleway";
@@ -172,25 +162,23 @@ background-color: #353541; */
     line-height: normal;
 }
 
-.aboutme__card li{
+.aboutme__card li {
     padding-bottom: 15px;
     padding-top: 15px;
     list-style-type: none;
 }
-    
-.aboutme__param li{
-  border-bottom: 2px solid  #e5e5e5 ; 
-  list-style-type: none;  
+
+.aboutme__param li {
+    border-bottom: 2px solid #e5e5e5;
+    list-style-type: none;
 }
 
-
-.aboutme__photo{    
+.aboutme__photo {
     height: 526px;
-    min-width:  380px;    
+    min-width: 380px;
     position: relative;
     overflow: hidden;
 }
-
 
 .aboutme__photo img {
     min-width: 100%;
@@ -201,8 +189,7 @@ background-color: #353541; */
     transform: translate3d(-50%, -50%, 0);
 }
 
-
-.experience__title{
+.experience__title {
     color: #3e3e3e;
     font-family: "Raleway";
     font-size: 32px;
@@ -214,46 +201,43 @@ background-color: #353541; */
     line-height: normal;
 }
 
-
-.experience__flex{
+.experience__flex {
     display: flex;
     justify-content: space-between;
     text-align: center;
     margin-bottom: 180px;
 }
 
-
-.experience__item{
+.experience__item {
     width: 512px;
     height: 147px;
 }
 
-.experience__item.right{
+.experience__item.right {
     background: #ffffff url("../img/Rounded_Rectangle_right.svg") center no-repeat;
-    top:50%;
-    left:50%;
+    top: 50%;
+    left: 50%;
     padding: 20px 82px 20px 20px;
     background-size: 512px 147px;
-}   
+}
 
-.experience__item.left{
+.experience__item.left {
     background: #ffffff url("../img/Rounded_Rectangle_left.svg") center no-repeat;
-    top:50%;
-    left:50%;
+    top: 50%;
+    left: 50%;
     padding: 20px 30px 20px 60px;
     background-size: 512px 147px;
 }
 
-.right{
+.right {
     margin-top: 100px;
 }
 
-.right.long, .left.long{
+.right.long, .left.long {
     margin-top: 190px;
 }
 
-
-.experience__position{  
+.experience__position {
     color: #ffffff;
     font-family: Raleway;
     font-size: 22px;
@@ -264,7 +248,8 @@ background-color: #353541; */
     line-height: normal;
     padding-bottom: 15px;
 }
-.experience__company{ 
+
+.experience__company {
     padding-left: 10px;
     opacity: 0.8;
     color: #ffffff;
@@ -276,7 +261,8 @@ background-color: #353541; */
     text-align: left;
     line-height: normal;
 }
-.experience__data{
+
+.experience__data {
     display: block;
     color: #fb6470;
     font-family: Raleway;
@@ -290,7 +276,7 @@ background-color: #353541; */
     padding-bottom: 15px;
 }
 
-.experience__text{
+.experience__text {
     display: block;
     color: #ffffff;
     font-family: Raleway;
@@ -301,49 +287,50 @@ background-color: #353541; */
     line-height: 27.62px;
     text-align: left;
     line-height: normal;
-    
 }
-.experience__item.right p.experience__text{
+
+.experience__item.right p.experience__text {
     padding-right: 0px;
 }
-.vl {
-    border-left: 2px solid  #353541;
-    height: auto;  
-    margin-left: -1px;    
-    position: relative;
 
+.vl {
+    border-left: 2px solid #353541;
+    height: auto;
+    margin-left: -1px;
+    position: relative;
 }
 
-.cirlce_1{
+.cirlce_1 {
     position: absolute;
     top: 0;
     left: -25px;
 }
 
-.cirlce_2{
+.cirlce_2 {
     position: absolute;
     top: 180px;
     left: -25px;
 }
-.cirlce_3{
+
+.cirlce_3 {
     position: absolute;
     top: 318px;
     left: -25px;
-
 }
-.cirlce_4{
+
+.cirlce_4 {
     position: absolute;
     bottom: 0;
     left: -25px;
 }
 
-.myskills{
+.myskills {
     background-color: #1d1d24;
     padding: 64px;
     margin-bottom: 105px;
-    
 }
-.myskills__title{  
+
+.myskills__title {
     color: #ffffff;
     font-family: "Raleway";
     font-size: 32px;
@@ -351,11 +338,12 @@ background-color: #353541; */
     font-style: normal;
     letter-spacing: normal;
     line-height: 50px;
-    text-align: left;  
+    text-align: left;
     line-height: normal;
     position: relative;
 }
-.myskills__title::before{  
+
+.myskills__title::before {
     position: absolute;
     content: "";
     display: block;
@@ -366,171 +354,172 @@ background-color: #353541; */
     left: 0;
     z-index: 1;
     width: 80px;
-
 }
 
-
-
-.myskills__flex{
+.myskills__flex {
     display: flex;
     justify-content: space-between;
     align-items: center;
-
 }
 
-.myskills__card{
+.myskills__card {
     flex: 33.33333%;
-
 }
-.myskills_skill{
-    /* border-bottom: 2px solid #e85662; */
+
+.myskills_skill {
     border-bottom: 6px solid #ffffff;
     padding-bottom: 10px;
     margin: 60px;
     position: relative;
 }
- .myskills_skill:before{
-        content: "";
-        display: block;
-        height: 6px;
-        background-color: #e85662;
-        position: absolute;
-        bottom: -6px;
-        left: 0;
-        z-index: 1;
-}
-.skill__size-1:nth-child(1):before{
-    width: 25%;   
-}
-.skill__size-1:nth-child(2):before{
-    width: 25%;   
-}
-.skill__size-1:nth-child(3):before{
-    width: 50%;   
-}
-.skill__size-2:nth-child(1):before{
-    width: 50%;   
-}
-.skill__size-2:nth-child(2):before{
-    width: 25%;   
-}
-.skill__size-2:nth-child(3):before{
-    width: 96%;   
-}
-.skill__size-3:nth-child(1):before{
-    width: 90%;   
-}
-.skill__size-3:nth-child(2):before{
-    width: 90%;   
-}
-.skill__size-3:nth-child(3):before{
-    width: 20%;   
+
+.myskills_skill:before {
+    content: "";
+    display: block;
+    height: 6px;
+    background-color: #e85662;
+    position: absolute;
+    bottom: -6px;
+    left: 0;
+    z-index: 1;
 }
 
-.skill__size-1:nth-child(-n+3){
+.skill__size-1:nth-child(1):before {
+    width: 25%;
+}
+
+.skill__size-1:nth-child(2):before {
+    width: 25%;
+}
+
+.skill__size-1:nth-child(3):before {
+    width: 50%;
+}
+
+.skill__size-2:nth-child(1):before {
+    width: 50%;
+}
+
+.skill__size-2:nth-child(2):before {
+    width: 25%;
+}
+
+.skill__size-2:nth-child(3):before {
+    width: 96%;
+}
+
+.skill__size-3:nth-child(1):before {
+    width: 90%;
+}
+
+.skill__size-3:nth-child(2):before {
+    width: 90%;
+}
+
+.skill__size-3:nth-child(3):before {
+    width: 20%;
+}
+
+.skill__size-1:nth-child(-n+3) {
     margin-left: 0;
 }
 
-.skill__size-1:nth-child(-n3){
+.skill__size-1:nth-child(-n3) {
     margin-right: 0;
 }
 
-.size{
+.size {
     position: absolute;
-    display:block;
+    display: block;
     bottom: -10px;
     right: -40px;
 }
 
-.circle__red-1,
-.circle__red-2,
-.circle__red-3,
-.circle__red-4,
-.circle__red-5,
-.circle__red-6,
-.circle__red-7,
-.circle__red-8,
-.circle__red-9{
+.circle__red-1, .circle__red-2, .circle__red-3, .circle__red-4, .circle__red-5, .circle__red-6, .circle__red-7, .circle__red-8, .circle__red-9 {
     position: absolute;
     width: 18px;
     height: 18px;
     border-radius: 50%;
     background-color: #e85662;
     bottom: -12px;
-
 }
 
-.circle__red-1{
+.circle__red-1 {
     left: 20%;
 }
-.circle__red-2{
+
+.circle__red-2 {
     left: 20%;
 }
-.circle__red-3{
+
+.circle__red-3 {
     left: 45%;
 }
-.circle__red-4{
+
+.circle__red-4 {
     left: 45%;
 }
-.circle__red-5{
+
+.circle__red-5 {
     left: 25%;
 }
-.circle__red-6{
+
+.circle__red-6 {
     left: 91%;
 }
-.circle__red-7{
+
+.circle__red-7 {
     left: 85%;
 }
-.circle__red-8{
+
+.circle__red-8 {
     left: 85%;
 }
-.circle__red-9{
+
+.circle__red-9 {
     left: 15%;
 }
 
-
-
-.footer{
-    background-color:#ffffff
+.footer {
+    background-color: #ffffff
 }
 
-.footer_title{
-text-align: center;
-color: rgb(75, 84, 86);
-text-transform: uppercase;
-font-size: 14px;   
-padding-top: 20px;
-padding-bottom: 40px;
+.footer_title {
+    text-align: center;
+    color: rgb(75, 84, 86);
+    text-transform: uppercase;
+    font-size: 14px;
+    padding-top: 20px;
+    padding-bottom: 40px;
 }
-.footer_social{
+
+.footer_social {
     display: flex;
     align-items: center;
     justify-content: space-between;
-padding-top: 35px;
+    padding-top: 35px;
 }
 
-.footer_social ul{
-display: flex;
-
-align-items: center; 
-}
-.footer_social ul li{
-
-list-style-type: none;
-margin: 0 10px;
-
-
-}
-.fab{
-color: #717171;
-font-size: 35px;
+.footer_social ul {
+    display: flex;
+    align-items: center;
 }
 
-.fab:hover{
-color: #2ac2c8;
+.footer_social ul li {
+    list-style-type: none;
+    margin: 0 10px;
 }
 
-.message__title{
+.fab {
+    color: #717171;
+    font-size: 35px;
+}
+
+.fab:hover {
+    color: #2ac2c8;
+}
+
+.message__title {
     color: #3e3e3e;
     font-family: Raleway;
     font-size: 22px;
@@ -542,17 +531,20 @@ color: #2ac2c8;
     line-height: normal;
     padding-bottom: 22px;
 }
-.message__flex{
+
+.message__flex {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.message__box{
+
+.message__box {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.message___form{
+
+.message___form {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -561,10 +553,9 @@ color: #2ac2c8;
     height: 145px;
     align-content: space-around;
     margin-bottom: 50px;
-    
-    
 }
-.message__message{
+
+.message__message {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
@@ -572,10 +563,9 @@ color: #2ac2c8;
     padding-right: 22px;
     height: 195px;
     align-content: space-around;
-    
 }
 
-input, textarea{
+input, textarea {
     border: 1px solid black;
     color: #3e3e3e;
     font-family: "Raleway";
@@ -586,44 +576,47 @@ input, textarea{
     line-height: normal;
     resize: none;
 }
-input{
+
+input {
     height: 35px;
-    width:265px;
+    width: 265px;
 }
 
-textarea{
+textarea {
     height: 145px;
     width: 265px;
 }
 
-input::placeholder, textarea::placeholder{
+input::placeholder, textarea::placeholder {
     padding-left: 10px;
 }
-textarea::placeholder{
+
+textarea::placeholder {
     padding-top: 10px;
 }
-.message__btn{
+
+.message__btn {
     width: 95px;
     height: 35px;
-    background-color:#fb6470;;
-    font-weight: bold;      
-    color: #ffffff; 
+    background-color: #fb6470;
+    ;
+    font-weight: bold;
+    color: #ffffff;
     cursor: pointer;
-    text-transform: uppercase; 
-    outline: none; /*убирает черный бордер при клике по кнопке*/
+    text-transform: uppercase;
+    outline: none;
+    /*убирает черный бордер при клике по кнопке*/
     margin-top: 15px;
-   
 }
 
-
-.message__items{
+.message__items {
     display: flex;
     justify-content: start;
     text-align: center;
     padding-bottom: 32px;
 }
 
-h3{
+h3 {
     color: #3e3e3e;
     font-family: Raleway;
     font-size: 22px;
@@ -631,13 +624,14 @@ h3{
     font-style: normal;
     letter-spacing: normal;
     line-height: 50px;
-    
     line-height: normal;
 }
-.message__text{
+
+.message__text {
     text-align: left;
 }
-.message__text p{
+
+.message__text p {
     opacity: 0.8;
     color: #3e3e3e;
     font-family: Raleway;
@@ -649,17 +643,20 @@ h3{
     line-height: normal;
 }
 
-.message__img{
+.message__img {
     padding-right: 46px;
 }
-.social__icon{
+
+.social__icon {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.icon__rsschool{
+
+.icon__rsschool {
     padding-right: 20px;
 }
-.icon__github{
+
+.icon__github {
     padding-left: 20px;
 }
